backend/test/resources/valid/conditions_simple.lgf
@nodes
label type ref
0 11 1
1 11 2
2 0 35
3 0 36
4 20 1
@arcs
    condition
0 1 "6b9ac09535885ca55e29dd011e377c0a"
0 4 "SONST"
1 2 "d2b43df0bc80d56f07490b053fdb20d4"
1 3 "SONST"
2 4 ""
3 4 ""
@attributes
target 4
