backend/test/resources/invalid/not_compressable.lgf
@nodes
label type ref
0 11 1
1 10 0
2 10 0
3 20 1
4 11 2
6 10 0
7 20 2
8 20 2
9 20 1
@arcs
    condition
0 1 "6b9ac09535885ca55e29dd011e377c0a"
0 2 "SONST"
1 3 ""
2 3 ""
1 7 ""
2 8 ""
3 4 ""
4 7 "d2b43df0bc80d56f07490b053fdb20d4"
4 6 "SONST"
6 7 ""
6 8 ""
7 9 ""
8 9 ""
@attributes
target 9
